compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_decl_wrong_type_stack_size.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "process a : 1.0 end a"

---
"a"@(FileId(1), 8..9) [Declared]: process -> void
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 12..15: mismatched types
| note in file FileId(1) for 12..15: this is of type `real`
| info: `real` is not an integer type
