compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_result_ty_normal.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "function tree : int end tree"

---
"tree"@(FileId(1), 9..13) [Declared]: function -> int
"<root>"@(dummy) [Declared]: <error>

