compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_result_ty_string_any_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "function _ : string(*) end _"

---
"_"@(FileId(1), 9..10) [Declared]: function -> string_n Any
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 13..22: invalid storage type
| error in file FileId(1) for 13..22: cannot use `string(*)` in `function` declarations
| info: `string(*)`'s refer to strings that do not have a fixed size known at compile-time
