compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_bare_function.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "function a : int end a"

---
"a"@(FileId(1), 9..10) [Declared]: function -> int
"<root>"@(dummy) [Declared]: <error>

