compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_bare_procedure.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "type _ : procedure"

---
"_"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of procedure -> void
"<root>"@(dummy) [Declared]: <error>

