compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_char_any_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : function () : char(*)"
---
"<unnamed>"@(dummy) [Undeclared]: <error>
"_"@(FileId(1), 5..6) [Type]: alias[DefId(LibraryId(0), LocalDefId(1))] of function ( ) -> char_n Any
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 23..30: invalid storage type
| error in file FileId(1) for 23..30: cannot use `char(*)` in `function` types
| info: `char(*)`'s refer to character sequences that do not have a fixed size known at compile-time
